# le-maia

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PATENT_DRAFT_PROVISIONAL.md  README.md  ROADMAP.md  blueprint.md  colab_training.py  modules.md  pyproject.toml  swarm.md  thesis.md  train_local.py
.github/workflows/: ci.yml
configs/: dataset.yaml
ffmpeg/: Makefile  README_FFMPEG.md  lewm_vc_common.c  lewm_vc_common.h  lewm_vc_decoder.c  lewm_vc_encoder.c
src/lewm_vc/: __init__.py  decoder.py  encoder.py  entropy.py  predictor.py  quant.py  video_encoder.py  working_decoder.py
src/lewm_vc/bitstream/: __init__.py  reader.py  writer.py
src/lewm_vc/utils/: __init__.py  rate_control.py
src/scripts/: __init__.py  train.py  train_decoder.py
tests/: __init__.py  test_bitstream.py  test_decoder.py  test_encoder.py  test_entropy.py  test_integration.py  test_predictor.py  test_quant.py  test_rate_control.py  test_thread_safety.py  test_training.py
